exports[`reducers > analysis should handle clear isochrone results 1`] = `
Object {
  "active": false,
  "isFetchingIsochrone": false,
  "isochrone": null,
  "isochroneCutoff": 60,
  "isochroneLatLng": null,
  "regional": Object {
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
}
`;

exports[`reducers > analysis should handle default state 1`] = `
Object {
  "active": false,
  "isFetchingIsochrone": false,
  "isochroneCutoff": 60,
  "regional": Object {
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
}
`;

exports[`reducers > analysis should handle set isochrone cutoff 1`] = `
Object {
  "active": false,
  "isFetchingIsochrone": false,
  "isochroneCutoff": 123,
  "regional": Object {
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
}
`;

exports[`reducers > analysis should handle set isochrone fetch status 1`] = `
Object {
  "active": false,
  "isFetchingIsochrone": true,
  "isochroneCutoff": 60,
  "regional": Object {
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
}
`;

exports[`reducers > analysis should handle set isochrone latlng 1`] = `
Object {
  "active": false,
  "isFetchingIsochrone": false,
  "isochroneCutoff": 60,
  "isochroneLatLng": 123,
  "regional": Object {
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
}
`;

exports[`reducers > analysis should handle set isochrone results 1`] = `
Object {
  "accessibility": undefined,
  "active": false,
  "currentIndicator": undefined,
  "isFetchingIsochrone": false,
  "isochrone": 123,
  "isochroneCutoff": undefined,
  "regional": Object {
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "id": null,
    "minimumImprovementProbability": 0.95,
    "percentile": 50,
    "probabilityGrid": null,
  },
  "spectrogramData": undefined,
}
`;
